[gd_scene load_steps=7 format=3 uid="uid://cjsx1gxvmgrcm"]

[ext_resource type="Script" uid="uid://tt2gcmdfympa" path="res://Player/Scripts/sense_ui.gd" id="1_ypnme"]
[ext_resource type="Texture2D" uid="uid://bmu1lancc4j4f" path="res://assets/evoli_assets/IMG_2704.PNG" id="2_g26je"]
[ext_resource type="Texture2D" uid="uid://bs6kxl2ugiicv" path="res://assets/evoli_assets/Touch_Icon.PNG" id="3_g26je"]
[ext_resource type="Texture2D" uid="uid://dqocb7lygjwkm" path="res://assets/evoli_assets/Hearing_Icon.PNG" id="4_g26je"]
[ext_resource type="AudioStream" uid="uid://cjpvq3f3w1h8j" path="res://assets/music/Using sight.wav" id="5_ck0wd"]
[ext_resource type="AudioStream" uid="uid://p17hnbjonw6v" path="res://assets/music/Using touch.wav" id="6_ljoqk"]

[node name="Sense_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
mouse_filter = 1
script = ExtResource("1_ypnme")

[node name="Sight" type="Button" parent="."]
layout_mode = 0
offset_right = 570.0
offset_bottom = 520.0
scale = Vector2(0.4, 0.4)
mouse_filter = 1
theme_override_font_sizes/font_size = 50
button_mask = 0
text = "
"
icon = ExtResource("2_g26je")
icon_alignment = 1
expand_icon = true

[node name="Label" type="Label" parent="Sight"]
layout_mode = 0
offset_left = 510.0
offset_right = 567.0
offset_bottom = 137.0
theme_override_font_sizes/font_size = 100
text = "1"

[node name="Touch" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -282.0
offset_top = 4.0
offset_right = 526.0
offset_bottom = 812.0
grow_horizontal = 2
scale = Vector2(0.26, 0.26)
mouse_filter = 1
theme_override_font_sizes/font_size = 50
button_mask = 0
icon = ExtResource("3_g26je")
icon_alignment = 1

[node name="Label2" type="Label" parent="Touch"]
layout_mode = 0
offset_left = 369.231
offset_top = -15.3846
offset_right = 426.231
offset_bottom = 121.615
theme_override_font_sizes/font_size = 100
text = "2"

[node name="Hear" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -580.0
offset_right = 228.0
offset_bottom = 808.0
grow_horizontal = 0
scale = Vector2(0.26, 0.26)
mouse_filter = 1
theme_override_font_sizes/font_size = 50
button_mask = 0
icon = ExtResource("4_g26je")
icon_alignment = 1

[node name="Label3" type="Label" parent="Hear"]
layout_mode = 0
offset_left = 492.308
offset_right = 549.308
offset_bottom = 137.0
theme_override_font_sizes/font_size = 100
text = "3"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="time_label" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = -138.0
offset_right = 933.0
offset_bottom = -1.0
theme_override_font_sizes/font_size = 100
text = "Disabled: 99 "

[node name="using_sight" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ck0wd")

[node name="using_touch" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ljoqk")

[connection signal="pressed" from="Sight" to="." method="_on_sight_pressed"]
[connection signal="pressed" from="Touch" to="." method="_on_touch_pressed"]
[connection signal="pressed" from="Hear" to="." method="_on_hear_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
